# python-project-starter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  atualizacao.md  checklist.md  mypy.ini  notepad.md  prd.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: project_summary.md  recruitment_email.md  user_feedback.md  user_guide.md  user_testing_plan.md
src/project_starter/: main.py
src/project_starter/templates/: _gitignore.template  _pyproject.toml.template  _readme.md.template
test_install/test_project/: .gitignore  pyproject.toml
test_project/: README.md  pyproject.toml
tests/: test_cli.py  test_helpers.py  test_integration.py
