[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-project-starter"
version = "0.1.0"
description = "A library to help non-technical users initialize and manage Python projects with professional standards."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Python Project Starter Contributors", email = "example@example.com" },
]
keywords = ["project", "template", "starter", "boilerplate", "git", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer[all] >= 0.9.0", # Using typer for the CLI
    "rich >= 13.0.0",      # For nice console output
]

[project.urls]
"Homepage" = "https://github.com/username/python-project-starter"
"Bug Tracker" = "https://github.com/username/python-project-starter/issues"
"Documentation" = "https://github.com/username/python-project-starter#readme"

[project.optional-dependencies]
dev = [
    "uv >= 0.1.18", # Pin UV version for consistency
    "ruff >= 0.3.0",
    "pytest >= 7.0.0",
    "pre-commit >= 3.6.0",
    "pytest-cov", # For coverage
    "pyright >= 1.1.350" # Add pyright CLI tool
]

# Add this section to define the command-line script entry point
[project.scripts]
pps = "project_starter.main:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Enable default rules (E, F) and common extras
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "PT", # flake8-pytest-style
    "PTH",# flake8-use-pathlib
]
ignore = [
    "E501", # Line too long, handled by formatter
    "B905", # `zip()` without `strict=`. Requires Python 3.10
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
# Paths to analyze
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".git",
]

typeCheckingMode = "basic" # Start with basic, can move to strict later

# Use warnings for potentially problematic code
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"

# Enforce type hint usage
reportMissingParameterType = "warning"
reportMissingReturnType = "warning"
reportMissingTypeArgument = "warning"

pythonVersion = "3.10" # Match requires-python
pythonPlatform = "All"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start with less strict settings
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --cov=src --cov-report=term-missing"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Add this section for Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["src/project_starter"]

# Add this section to ensure template files are included in the built package
[tool.hatch.build.targets.wheel.force-include]
"src/project_starter/templates" = "project_starter/templates"
