[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_project"
version = "0.1.0"
description = "" # TODO: Add project description
readme = "README.md"
requires-python = ">=3.10"
license = "MIT" # Or choose another license
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # TODO: Update author details
]
dependencies = [
    # Add core dependencies here
]

[project.optional-dependencies]
dev = [
    "uv >= 0.2.0",
    "ruff >= 0.6.0",
    "pytest >= 7.0.0",
    "mypy >= 1.8.0",
    "pre-commit >= 3.6.0",
    "pytest-cov",
]

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py310"
preview = true # Habilitar recursos experimentais

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4",
    "SIM", "PT", "PTH", "RET", "SLF", "ARG"
]
ignore = ["E501", "B905"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
pythonVersion = "3.10"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/test_project"]
